# harmony-engine

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.gpu  README.md  THIRD_PARTY_NOTICES.md  docker-compose.gpu.yml  docker-compose.yml  engine-spec.md  future-ideas.md  idea.md  pyproject.toml
.github/workflows/: release.yml
docker/: entrypoint.sh  pyproject.cpu.patch.toml  pyproject.gpu.patch.toml
docs/: docker.md  embedding-pool-spec.md  model-cache.md  server.md
harmony/: __init__.py  client.py  config.py  engine.py  errors.py  models.py
harmony/api/: __init__.py  app.py  schemas.py
harmony/audio/: __init__.py  chunking.py  loader.py  resample.py
harmony/cli/: main.py
harmony/embedding/: __init__.py  base.py  benchmark.py  factory.py  keep_alive.py  muq_mulan.py  pipeline.py  pooling.py
harmony/embedding/backends/: __init__.py  clamp3.py  muq_mulan.py
harmony/embedding/backends/clamp3_lib/: __init__.py  constants.py  inference.py  model.py
harmony/embedding/backends/clamp3_lib/mert/: MusicHubert.py  __init__.py  extractor.py  hf_pretrains.py
harmony/index/: __init__.py  base.py  brute.py  faiss_index.py  manager.py
harmony/jobs/: __init__.py  runner.py
harmony/retrieval/: __init__.py  aggregate.py  filters.py  search.py
harmony/scanner/: __init__.py  filesystem.py  tags.py
harmony/sources/: __init__.py  base.py  filesystem.py
harmony/storage/: __init__.py  db.py  metadata.py  purge.py  schema.sql  sync.py  vectors.py
scripts/: bootstrap.sh
tests/: fake_embedder.py  test_api.py  test_brute_index.py  test_clamp3_checkpoint.py  test_clamp3_lazy_mert.py  test_config.py  test_db.py  test_embedder_factory.py  test_embedding_pipeline.py  test_encode_benchmark.py  test_filesystem.py  test_filters.py  test_hot_reload.py  test_index_manager.py  test_jobs.py  test_keep_alive.py  test_models.py  test_path_validation.py  test_pooling.py  test_purge.py  test_search_filters.py  test_sync.py  test_tags.py  test_track_id_validation.py
